fix: Blurred spinner background

--- a/client/src/components/Body/Body.sass
+++ b/client/src/components/Body/Body.sass
@@ -2,17 +2,6 @@
   font-size: 1.5rem
   font-weight: 800
 
-.spinner-wrapper
-  position: fixed
-  top: 10%
-  left: 50%
-  transform: translate(-50%, -50%)
-  z-index: 1000
-
-  .loading-text
-    font-size: 1.5rem
-    font-weight: 700
-
 .current-wrapper
   max-width: 100vw
   width: 100%
